Refactor Inventory (Status/Filter), Add Assign Project, Update Mobile/Logout

--- a/public/mobile.css
+++ b/public/mobile.css
@@ -79,7 +79,7 @@
         /* Align left */
     }
 
-    .navbar-menu.mobile-open {
+    .navbar-menu.active {
         display: flex;
         animation: slideDown 0.3s ease-out;
     }
